# chat-history-manager

./: .gitignore  Cargo.toml  README.md  build.rs
backend/: Cargo.toml
backend/protobuf/: services.proto
backend/resources/main/migrations/202407071__profile_pictures/: up.sql
backend/resources/test/telegram_2024-05_boosts_file-name_etc/: result.json
backend/resources/test/telegram_2024-06_blockquote-collapsed/: result.json
backend/resources/test/telegram_2025-02_joined/: result.json
backend/resources/test/tinder-android_2024-07_photos/: tinder-3.sql
backend/src/: dao.rs  grpc.rs  lib.rs  loader.rs  server.rs  utils.rs
backend/src/dao/: in_memory_dao.rs  in_memory_dao_tests.rs  sqlite_dao.rs  sqlite_dao_tests.rs
backend/src/dao/sqlite_dao/: mapping.rs  utils.rs
backend/src/grpc/: client.rs  server.rs
backend/src/grpc/client/: myself_chooser.rs  user_input_grpc_requester.rs  user_input_requester.rs
backend/src/grpc/server/: history_dao_service.rs  history_loader_service.rs  merge_service.rs  user_info_service.rs
backend/src/loader/: badoo_android.rs  badoo_android_tests.rs  mra.rs  signal.rs  signal_tests.rs  telegram.rs  telegram_tests.rs  tinder_android.rs  tinder_android_tests.rs  whatsapp_android.rs  whatsapp_android_tests.rs  whatsapp_text.rs  whatsapp_text_tests.rs
backend/src/loader/mra/: db.rs  mra_dbs.rs
backend/src/loader/telegram/: parser_single.rs
backend/src/merge/: analyzer.rs  analyzer_tests.rs  merger.rs  merger_tests.rs
backend/src/server/: history_dao_service.rs  history_loader_service.rs
backend/src/utils/: json_utils.rs  test_utils.rs
backend/src/utils/entity_utils/: entity_equality.rs
crates/backend/: Cargo.toml  build.rs
crates/backend/protobuf/: services.proto
crates/backend/src/: dao.rs  grpc.rs  lib.rs  loader.rs  utils.rs
crates/backend/src/dao/: sqlite_dao.rs
crates/backend/src/grpc/: client.rs  server.rs
crates/backend/src/grpc/client/: user_input_grpc_requester.rs
crates/backend/src/grpc/server/: history_dao_service.rs  history_loader_service.rs  merge_service.rs  user_info_service.rs
crates/backend/src/loader/: mra.rs  signal_tests.rs  telegram.rs  telegram_tests.rs  tinder_android_tests.rs  whatsapp_android_tests.rs
crates/backend/src/loader/mra/: db.rs
crates/backend/src/loader/telegram/: parser_single.rs
crates/backend/src/merge/: analyzer.rs  analyzer_tests.rs  merger.rs  merger_tests.rs
crates/backend/src/utils/: blob_utils.rs  test_utils.rs
crates/backend/src/utils/entity_utils/: entity_equality.rs
crates/core/: Cargo.toml  build.rs
crates/core/protobuf/: entities.proto
crates/core/src/: utils.rs
crates/core/src/utils/: entity_utils.rs  sqlite_utils.rs  test_utils.rs
crates/core/src/utils/entity_utils/: entity_comparison.rs  entity_equality.rs
crates/dao/: Cargo.toml
crates/dao/src/: in_memory_dao.rs  in_memory_dao_tests.rs  lib.rs  sqlite_dao.rs  sqlite_dao_tests.rs
crates/dao/src/sqlite_dao/: mapping.rs  utils.rs
crates/dao/src/utils/: test_utils.rs
crates/loaders/: Cargo.toml
crates/loaders/resources/test/badoo-android_2026-03_null-named-user/: ChatComDatabase.sql
crates/loaders/resources/test/badoo-android_2026-05/: ChatComDatabase.sql
crates/loaders/resources/test/signal_2024-08-macos/: plaintext.sql
crates/loaders/resources/test/telegram_2020-01/: result.json
crates/loaders/resources/test/telegram_2024-08/: result.json
crates/loaders/resources/test/telegram_2025-02_joined_file-size/: result.json
crates/loaders/resources/test/telegram_2025-03_service-photo-size/: result.json
crates/loaders/resources/test/telegram_2025-12/: result.json
crates/loaders/resources/test/whatsapp-android_2023-10/: msgstore.sql  wa.sql
crates/loaders/resources/test/whatsapp-android_2026-01/: msgstore.sql  wa.sql
crates/loaders/resources/test/whatsapp-android_2026-05/: msgstore.sql  wa.sql
crates/loaders/src/: lib.rs  loader.rs  utils.rs
crates/loaders/src/loader/: badoo_android.rs  badoo_android_tests.rs  instagram_export.rs  mra.rs  signal.rs  signal_tests.rs  telegram.rs  telegram_tests.rs  tg_keeper.rs  tinder_android.rs  tinder_android_tests.rs  whatsapp_android.rs  whatsapp_android_tests.rs  whatsapp_text.rs  whatsapp_text_tests.rs
crates/loaders/src/loader/mra/: db.rs  mra_dbs.rs
crates/loaders/src/loader/telegram/: parser_full.rs  parser_single.rs
crates/loaders/src/utils/: json_utils.rs  test_utils.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/frontend/: package.json  pnpm-lock.yaml  tsconfig.json
crates/ui/frontend/src/app/: navigation_bar.tsx  page.tsx
crates/ui/src/: lib.rs
ui/: Cargo.toml  Tauri.toml  build.rs
ui/capabilities/: main.json
ui/frontend/: .gitignore  declarations.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
ui/frontend/src/app/: error.tsx  layout.tsx  navigation_bar.tsx  page.tsx  test-popup.tsx  test_entities.ts  utils.ts
ui/frontend/src/app/chat/: chat.tsx  chat_avatar.tsx  chat_details_full.tsx  chat_details_short.tsx  chat_entry_short.tsx  chat_entry_technical.tsx  chat_item.tsx  chat_list.tsx  chat_list_item.tsx
ui/frontend/src/app/contact/: contact.tsx  contact_list.tsx
ui/frontend/src/app/dataset/: dataset_selector.tsx  dataset_selector_dialog.tsx  select_datasets_to_compare_dialog.tsx  shift_dataset_time.tsx
ui/frontend/src/app/diff/: diff.tsx  diff_model_messages.ts  diff_model_users.ts  diff_pair.tsx  diff_section.tsx
ui/frontend/src/app/general/: avatar.tsx  export_as_html.tsx  input_overlay.tsx  lazy_content.tsx  list_entities.tsx  list_filter_input.tsx  load_spinner.tsx  tauri_image.tsx  user_input_requester.tsx
ui/frontend/src/app/message/: audio_component.tsx  colored_name.tsx  content.tsx  load_spinner.tsx  message.tsx  message_list.tsx  rich_text.tsx  system_message.tsx  timestamp.tsx  title.tsx  typed.tsx
ui/frontend/src/app/user/: manage_users.tsx  user_avatar.tsx  user_details_short.tsx  user_entry_technical.tsx
ui/frontend/src/app/utils/: audio_component.tsx  avatar.tsx  chat_state.ts  entity_utils.ts  export_as_html.tsx  input_overlay.tsx  (+8 more)
ui/src/: lib.rs
(+62 files in other folders)
