[package]
name = "chat-history-manager"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-backend = { workspace = true }

# General
mimalloc = "0.1.39" # As advise by SIMD Json docs
deepsize = { workspace = true }

# Async processing
tokio = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { version = "4.5.2", features = ["derive"] }


# ======================================================================================================================
# WORKSPACE
# ======================================================================================================================

[workspace]
members = [
    "core",
    "backend",
]

[workspace.package]
authors = ["frozenspider"]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
chat-history-manager-core = { path = "core" }
chat-history-manager-backend = { path = "backend" }

itertools = "0.13.0"
lazy_static = "1.5.0"
derive_deref = "1.1.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }
deepsize = "0.2.0"
paste = "1.0.15"

# Async processing
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

# Text processing
regex = "1.10.6"

# Protobuf
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-reflection = "0.11.0"

# Logging
log = "0.4.22"
env_logger = "0.11.5"

[workspace.dependencies.uuid]
version = "1.7.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
