[package]
name = "chat-history-manager"
authors.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["ui-full"]
ui-core = ["dep:chat-history-manager-ui"]
ui-full = ["ui-core", "dep:tauri-cli", "chat-history-manager-ui/run-before-build-command"]

[dependencies]
chat-history-manager-backend = { workspace = true }
chat-history-manager-ui = { workspace = true, optional = true }

# General
mimalloc = "0.1.39" # As advise by SIMD Json docs
deepsize = { workspace = true }

# Async processing
tokio = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { version = "4.5.2", features = ["derive"] }

[build-dependencies]
tauri-cli = { version = "2.0.0-beta.17", optional = true }

# ======================================================================================================================
# WORKSPACE
# ======================================================================================================================

[workspace]
members = [
    "crates/core",
    "crates/dao",
    "crates/loaders",
    "crates/backend",
    "crates/ui"
]

[workspace.package]
authors = ["frozenspider"]
version = "0.9.0"
edition = "2024"

[workspace.dependencies]
chat-history-manager-core = { path = "crates/core" }
chat-history-manager-dao = { path = "crates/dao" }
chat-history-manager-loaders = { path = "crates/loaders" }
chat-history-manager-backend = { path = "crates/backend" }
chat-history-manager-ui = { path = "crates/ui" }

itertools = "0.14.0"
lazy_static = "1.5.0"
derive_deref = "1.1.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }
deepsize = "0.2.0"
paste = "1.0.15"
mime2ext = "0.1.53"
simd-json = "0.14.3"
path-dedot = "3.1.1"
chrono = "0.4.40"
const_format = "0.2.32"

# Async processing
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

# Serde
serde = "1.0.197"
serde_json = "1.0.115"

# Text processing
regex = "1.10.6"
unicode-segmentation = "1.11.0"

# Protobuf
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-reflection = "0.11.0"
tonic-web = "0.11.0"

# Logging
log = "0.4.22"
env_logger = "0.11.5"

[workspace.dependencies.uuid]
version = "1.7.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
