[package]
name = "chat-history-manager-backend"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-core = { workspace = true }

itertools = { workspace = true }
simd-json = "0.13.9"
chrono = "0.4.38"
lazy_static = { workspace = true }
hashers = "1.0.1"
rand = { version = "0.8.5", features = ["small_rng"] }
derive_deref = { workspace = true }
anyhow = { workspace = true }
ical = "0.11.0"
const_format = "0.2.32"
reqwest = { version = "0.12.7", features = ["blocking"] }
deepsize = { workspace = true }
zip = "2.2.0"
fs_extra = "1.3.0"
uuid = { workspace = true }
indexmap = "2.4.0"

# Text processing
regex = { workspace = true }
unicode-segmentation = "1.11.0"
utf16string = "0.2.0"
rtf-grimoire = "0.2.1"
encoding_rs = "0.8.34"

# Enum derivation
num-traits = "0.2.19"
num-derive = "0.4.2"

# Database
rusqlite = { version = "0.32.1", features = ["bundled", "backup"] }
diesel = { version = "2.2.3", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

# Protobuf and web service
prost = { workspace = true }
tonic = { workspace = true }
tonic-web = "0.11.0"
tonic-reflection = { workspace = true }

# Async processing
futures = { workspace = true }
tokio = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
chat-history-manager-core = { workspace = true, features = ["test-utils"] }
pretty_assertions = "1.4.0"

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
tonic-build = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

