[package]
name = "chat-history-manager-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-core = { workspace = true }

lazy_static = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22.0"

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Tauri
tauri = { version = "2.0.0-beta.13", features = [ "config-toml" ] }
tauri-plugin-dialog = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.3"
log = "0.4.21"

[build-dependencies]
tauri-build = "2.0.0-beta.10"
