[package]
name = "chat-history-manager-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-core = { workspace = true }
chat-history-manager-backend = { workspace = true }

itertools = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22.0"

tokio = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Tauri
tauri = { version = "2.0.0-beta.14", features = [ "config-toml", "protocol-asset" ] }
tauri-plugin-dialog = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.4"
log = "0.4.21"

[build-dependencies]
tauri-build = "2.0.0-beta.10"
