[package]
name = "chat-history-manager-backend"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-core = { workspace = true }
chat-history-manager-dao = { workspace = true }
chat-history-manager-loaders = { workspace = true }

itertools = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
rand = { version = "0.9.0", features = ["small_rng"] }
anyhow = { workspace = true }
reqwest = { version = "0.12.7", features = ["blocking"] }
deepsize = { workspace = true }
uuid = { workspace = true }
paste = { workspace = true }
indexmap = "2.4.0"
path-dedot = { workspace = true }

# Enum derivation
num-derive = { workspace = true }

# Protobuf and web service
prost = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tonic-reflection = { workspace = true }

# Async processing
futures = { workspace = true }
tokio = { workspace = true }

# Logging
log = { workspace = true }

# Testing
pretty_assertions = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-build = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

