[package]
name = "chat-history-manager-core"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
itertools = { workspace = true }
lazy_static = { workspace = true }
derive_deref = { workspace = true }
anyhow = { workspace = true }
deepsize = { workspace = true }
uuid = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hashers = "1.0.1"

# Serde
serde = { workspace = true }

# Text processing
regex = { workspace = true }
unicode-segmentation = { workspace = true }
phonenumber = { workspace = true }

# Protobuf
prost = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
tonic-build = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
